--- a/docker/Dockerfile-symfony
+++ b/docker/Dockerfile-symfony
@@ -6,6 +6,9 @@ RUN apt-get update && apt-get install -y zlib1g-dev g++ git librabbitmq-dev libi
     && pecl install amqp \
     && docker-php-ext-enable apcu amqp
 
+# Copy php.ini
+COPY ./php.ini /usr/local/etc/php/php.ini
+
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
