--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -4,8 +4,13 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    csv_directory: '%kernel.project_dir%/var/csv'
 
 services:
+    App\MessageHandler\CsvImportHandler:
+        arguments:
+            $csvDirectory: '%csv_directory%'
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
